# econ6912-replication

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
data/: quarterly_data_AUS.xlsx  quarterly_hfi_var_data.xlsx  quarterly_shocks_AUS.xlsx
data/AUS_raw_data/: 5206004_Expenditure_Price_Indexes.xlsx  5206041_Industry_Indexes.xlsx  QAUR628BIS.xls  corporate_bonds_f03hist.xlsx  cpi_table_13_640111.xlsx  cpi_table_1_640101.xlsx  f01hist.xlsx  f02histhist.xls  mp-surprises.csv
src/data/: asx-shock.csv  monthly_data.xlsx  monthly_factors.xlsx  quarterly_factors.xlsx  ~$quarterly_hfi_var_data.xlsx
src/econ_lib/: __init__.py
src/scripts/: __init__.py  classes.py  copilot_stuffs.py  data_cleaning.ipynb  functions.py  hello.py  replicate_fig1.ipynb  replicate_fig1.py  replicate_fig1_AUS.ipynb  replicate_fig1_AUS.py  replicate_fig2.py  replicate_fig2_AUS.py  tester.ipynb
src/scripts/.ipynb_checkpoints/: replicate_fig1-checkpoint.ipynb  tester-checkpoint.ipynb
