[project]
name = "econ_lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.2",
    "pip>=24.2",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.2.4",
    "openpyxl>=3.1.5",
    "numpy>=2.1.0",
    "matplotlib>=3.9.2",
]

[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"
